# native

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  FUNDING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  canopy-autolink.gradle  osv-scanner.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
LICENSES/: model-provenance.tsv
bench/rn-comparison/: README.md  spec.json
corpus/: canopy.json  native.config.json
corpus/src/: Main.can
docs/: app-store-2.5.2.md  architecture.md  c1-native-module-abi.md  ci-e2e-ios.md  ci-ios.md  ci-secrets.md  ci.md  compatibility-matrix.json  compatibility-matrix.md  compiler-fixes.md  compiler-pinning.md  css-in-js-native.md  device-farm.md  extension-abi.md  guarantee.md  ios-device-testing-linux.md  ios-testflight.md  llms-native.txt  perf-bar.md  production-readiness.md  rn-coupling.md  roadmap.md  telemetry-schema.json  telemetry.md  troubleshooting.md  vendored-binaries.md
e2e/: .gitignore  README.md  caps.mjs  lumen-restore.mjs  matrix-report.mjs  package-lock.json  package.json  run-appium-ci.sh  run-appium-ios.sh  run-e2e.mjs  run-matrix.sh  smoke.mjs
e2e/flows/: counter-smoke.yaml  lumen-restore.yaml  smoke.yaml
examples/animtest/: native.config.json
examples/billingtest/: canopy.json  native.config.json
examples/captest/: native.config.json
examples/colortest/: native.config.json
examples/controlstest/: native.config.json
examples/counter/: README.md  canopy.json  canopy.json.installed  native.config.json
examples/echo/: canopy.json  native.config.json
examples/fanouttest/: native.config.json
examples/gesturetest/: native.config.json
examples/hosttest/: native.config.json
examples/httptest/: native.config.json
examples/imagetest/: native.config.json
examples/inputtest/: native.config.json
examples/listtest/: native.config.json
examples/lumen-probe/: canopy.json  native.config.json
examples/modaltest/: native.config.json
examples/navtest/: canopy.json  native.config.json
examples/pingtest/: canopy.json  native.config.json
examples/platformtest/: native.config.json
examples/redboxtest/: native.config.json
examples/refreshtest/: native.config.json
examples/scrolltest/: native.config.json
examples/statusbartest/: native.config.json
examples/styletest/: native.config.json
examples/uifixture/: native.config.json
harness/: bench-baseline.json  bench.js  counter-view.js  crashfree-report.js  mini-runtime.js  mock-fabric.js  mock-native-modules.js  package.json  perf-bar.js  perf-bar.json  perf-ledger.json  perf-report.js  run-batch.js  run-capability-fuzz.js  run-coalesce.js  run-command-and4.js  run-command.js  run-compiled.js  run-echo.js  run-fuzz-corpus.js  run-jsthread.js  run-keyed.js  run-lazy.js  run-list-perf.js  run-reload-perf.js  run-reload-recovery.js  run-reload-seam.js  run-reload-typehash.js  run-reload.js  run-stress.js  run-symbolicate-offline.js  run-symbolicate.js  run.js  symbolicate-offline.js
harness/fixtures/: canopy.testbuild.map  mapping.txt
harness/fuzz-corpus/: capability-inputs.json  reconciler-seeds.json
harness/perf-baselines/: README.md
host/: README.md  vendor.lock.json
host/android/: .gitignore  .remote-build.env.example  gradle.properties  remote-build.sh  settings.gradle
host/android/app/src/main/cpp/: CMakeLists.txt
host/ios/: .gitignore  .remote-build.env.example  BUILD-AND-VALIDATE.md  ExportOptions.plist  PART5-LEDGER.md  Package.swift  Podfile  README-ios.md  README.md  check-portable-cpp.sh  project.yml  remote-build.sh
host/shared/: .gitignore  CMakeLists.txt
host/shared/cpp/: BillingModule.cpp  BillingModule.h  CanopyAbi.h  CanopyAbiGate.h  CanopyBeforeAfter.h  CanopyBlobs.cpp  CanopyBlobs.h  CanopyFabric.cpp  CanopyFabric.h  CanopyHermes.cpp  CanopyHermes.h  CanopyImage.cpp  CanopyImage.h  CanopyJni.cpp  CanopyJni.h  CanopyModules.cpp  CanopyModules.h  CanopySignalFloor.cpp  CanopySignalFloor.h  EchoModule.cpp  EchoModule.h  RestoreColor.h  RestoreEngineModule.cpp  RestoreEngineModule.h  RestoreTiling.h  StreamingJniModule.cpp  StreamingJniModule.h
host/shared/cpp/tools/: colorconv-test.cpp  signalfloor-test.cpp  tilecover-test.cpp
host/shared/test-vectors/: README.md  beforeafter-vectors.json  beforeafter-vectors.schema.json  layout-vectors.json  validate-beforeafter.js  validate-vectors.js  vectors.schema.json
package/: README.md  canopy.json
package/plans/: TODO.md
package/src/: Native.can
plans/: 00-roadmap.md  01-rendering-and-components.md  02-layout-and-styling.md  03-native-modules-and-http.md  04-animation-and-gestures.md  05-web-package-reuse-and-runtime.md  06-ios-bringup.md  07-production-readiness-and-dx.md  08-testing-and-device-matrix.md  09-phase4-ecosystem.md  10-competitor-master-plan.md  11-lumen-critical-path.md  12-native-autolinking.md  AGENTS-INDEX.md  MASTER-PLAN.md  PHASE4-PROGRESS.md  PRODUCTION-ROADMAP.md
plans/dependent/: AND-4.md  AND-5.md  AND-7.md  AND-9.md  AUTO-C-IOS.md  (+65 more)
rfcs/: 0000-template.md  0001-reliability-guarantee-scope.md
scripts/: README.md  assert-bundle-manifest.sh  build-app-bundle.sh  build-compiler-from-pin.sh  bump-check.sh  check-abi.sh  check-autolink-zero-edit.sh  check-beforeafter-parity.sh  check-compatibility-matrix.sh  check-crash-floor.sh  check-crashfree-gate.sh  check-cross-platform-vectors.sh  check-fast-refresh-rides-bundle.sh  check-guarantee-doc.sh  check-hbc-shipped.sh  check-hermes-cabi.sh  check-ios-capability-parity.sh  check-ios-command-seam.sh  check-ios-devloop.sh  check-ios-lumen-e2e.sh  check-ios-marshalling.sh  check-ios-perf-gate.sh  check-ios-release-archive.sh  check-ios-restore-coreml.sh  check-ios-storekit2.sh  check-ios-testflight.sh  check-ios-validation-ledger.sh  check-llms-corpus.sh  check-model-provenance.sh  check-release-bundle-security.sh  check-reproducible-build.sh  check-rn-coupling.sh  check-rtl-parity.sh  check-vendor-pins.sh  ci-test.sh  compiler-pin.env  dev.sh  df-android.sh  df-aws.sh  df-browserstack.sh  (+15 more)
tool/: README.md  canopy-dev-server.js  canopy-native.cabal  package.yaml  stack.yaml
(+274 files in other folders)
