# CMakeLists.txt — builds libcanopyhost.so for the Echo app.
#
# Links the portable Canopy host (host/shared/cpp/*) + the Android JNI glue against the
# version-matched prebuilt Hermes/JSI/fbjni libraries vendored under host/android/vendor
# (extracted from the 0.76.9 hermes-android / react-android / fbjni AARs). No React Native.

cmake_minimum_required(VERSION 3.22)
project(canopyhost CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# host/android  (this file is at host/android/app/src/main/cpp)
get_filename_component(ANDROID_HOST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../.." ABSOLUTE)
# host/shared/cpp
get_filename_component(SHARED_CPP "${ANDROID_HOST_DIR}/../shared/cpp" ABSOLUTE)
set(VENDOR "${ANDROID_HOST_DIR}/vendor")

# Version-matched prebuilt .so as IMPORTED targets (per-ABI).
add_library(hermes SHARED IMPORTED)
set_target_properties(hermes PROPERTIES IMPORTED_LOCATION "${VENDOR}/lib/${ANDROID_ABI}/libhermes.so")
add_library(jsi SHARED IMPORTED)
set_target_properties(jsi PROPERTIES IMPORTED_LOCATION "${VENDOR}/lib/${ANDROID_ABI}/libjsi.so")
add_library(fbjni SHARED IMPORTED)
set_target_properties(fbjni PROPERTIES IMPORTED_LOCATION "${VENDOR}/lib/${ANDROID_ABI}/libfbjni.so")

# ONNX Runtime (canopy/inference) — vendored prebuilt, statically links libc++ (no conflict).
add_library(onnxruntime SHARED IMPORTED)
set_target_properties(onnxruntime PROPERTIES IMPORTED_LOCATION "${VENDOR}/onnxruntime/lib/${ANDROID_ABI}/libonnxruntime.so")

# Autolinked package C++ — GENERATED by `canopy-native` from the app's dependency graph
# (host/android/canopy-autolink.cmake; gitignored, regenerated each build). It sets
# CANOPY_AUTOLINK_CPP_SOURCES + CANOPY_AUTOLINK_CPP_INCLUDES from each dependency package's
# native/cpp dir (e.g. canopy/billing's BillingModule.cpp, canopy/inference's RestoreEngineModule.cpp)
# and defines CANOPY_HAS_GENERATED_REGISTRANT. When present, the app autolinks those C++ capabilities
# from their PACKAGES, so we DON'T also compile the host's own in-tree copies of them (that would be a
# duplicate-symbol link error). When ABSENT (an un-autolinked checkout — e.g. the device-free
# assembleDebug gate, or the standalone Echo host), this include() is a no-op and the host compiles
# its own in-tree copies exactly as before. This is the Android analogue of the iOS project.yml
# CanopySharedCpp autolink and closes the plan's "C++ costs two MORE shared edits" gap.
set(CANOPY_AUTOLINK_CPP_SOURCES "")
set(CANOPY_AUTOLINK_CPP_INCLUDES "")
set(CANOPY_AUTOLINK_CMAKE "${ANDROID_HOST_DIR}/canopy-autolink.cmake")
if(EXISTS "${CANOPY_AUTOLINK_CMAKE}")
    include("${CANOPY_AUTOLINK_CMAKE}")
endif()

# The host's own in-tree copies of the C++ capabilities still needed when an app is NOT autolinking
# them from their packages (the device-free assembleDebug gate, the standalone Echo host). Once an
# app autolinks a cpp capability, its package copy is compiled instead (CANOPY_AUTOLINK_CPP_SOURCES)
# and these in-tree duplicates are dropped to avoid a duplicate-symbol link error.
#
# AUTO-E-DELETE note: RestoreEngineModule.cpp stays HOST-RESIDENT by design — CanopyHostJni.cpp
# constructs g_restoreEngine and fills its model bytes after boot (nativeSetRestoreEngineModel), so
# the host always needs the RestoreEngineModule symbol in the un-autolinked path (it is NOT in the
# generated registrant, only a comment). BillingModule.cpp is kept here purely as the un-autolinked
# fallback: its globalBillingModule() factory is CALLED only by the generated registrant (i.e. only
# when billing IS autolinked, in which case the package copy is used and this one is dropped above),
# so compiling it un-autolinked is harmless (nothing references it) and keeps the host self-contained.
set(CANOPY_HOST_EXTRACTED_CPP
    ${SHARED_CPP}/RestoreEngineModule.cpp # canopy/inference: ORT NativeModule (host-resident)
    ${SHARED_CPP}/BillingModule.cpp       # canopy/billing: streaming entitlement NativeModule (fallback)
)
if(NOT CANOPY_AUTOLINK_CPP_SOURCES STREQUAL "")
    # An app is autolinking C++ packages; do not also compile the host's in-tree duplicates.
    set(CANOPY_HOST_EXTRACTED_CPP "")
endif()

add_library(canopyhost SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/../jni/CanopyHostJni.cpp
    ${SHARED_CPP}/CanopyHermes.cpp        # RNV-4: the ONE Hermes runtime factory (canopy::makeRuntime)
    ${SHARED_CPP}/CanopySignalFloor.cpp   # REL-2 SIG: portable native hard-crash floor (off by default)
    ${SHARED_CPP}/CanopyFabric.cpp
    ${SHARED_CPP}/CanopyModules.cpp
    ${SHARED_CPP}/CanopyBlobs.cpp
    ${SHARED_CPP}/EchoModule.cpp
    ${SHARED_CPP}/CanopyJni.cpp           # Foundation: JniModule + blob bridge + globalBlobRegistry + resolveModule
    ${SHARED_CPP}/CanopyImage.cpp         # canopy/image composite helpers
    ${SHARED_CPP}/StreamingJniModule.cpp  # canopy/navigation: generic Lifecycle/AppShell stream substrate (stays host-side)
    ${CANOPY_HOST_EXTRACTED_CPP}
    ${CANOPY_AUTOLINK_CPP_SOURCES}        # autolinked package C++ (empty unless an app autolinks a cpp capability)
)

target_include_directories(canopyhost PRIVATE
    ${SHARED_CPP}
    ${VENDOR}/hermes-include
    ${VENDOR}/jsi-include
    ${VENDOR}/onnxruntime/include
    ${CANOPY_AUTOLINK_CPP_INCLUDES}       # autolinked package C++ include dirs (e.g. native/cpp for BillingModule.h)
)

find_library(log-lib log)
find_library(jnigraphics-lib jnigraphics)   # AndroidBitmap_* for the blob↔Bitmap bridge
target_link_libraries(canopyhost hermes jsi fbjni onnxruntime ${log-lib} ${jnigraphics-lib})
